# LabelCalculator

./: CMakeLists.txt  LabelCalculator.pro  README.md  README.txt  application.cpp  application.h  connectiondefinition.cpp  connectiondefinition.h  connectiondefinitionparser.cpp  connectiondefinitionparser.h  connectioninput.cpp  connectioninput.h  connectioninputparser.cpp  connectioninputparser.h  datadevice.cpp  datadevice.h  datadeviceport.cpp  datadeviceport.h  device.cpp  device.h  devicefactory.cpp  devicefactory.h  deviceport.cpp  deviceport.h  deviceportinput.csv  deviceportsfactory.cpp  deviceportsfactory.h  displayutils.cpp  displayutils.h  error.cpp  error.h  errortypes.cpp  errortypes.h  labelutils.cpp  labelutils.h  main.cpp  parser.cpp  parser.h  parsercreator.cpp  parsercreator.h  (+5 more)
Application/: CMakeLists.txt  application.cpp  application.h  applicationdata.h  applicationutils.cpp  applicationutils.h  main.cpp
CoreFunctionality/: CMakeLists.txt
CoreFunctionality/CoreData/: applicationdata.h  auxdata.h  deviceportdata.h  deviceportdatatypes.h  deviceporttypes.h  parserdata.h
CoreFunctionality/CoreUtilities/: CMakeLists.txt  coreutilities.cpp  coreutilities.h  coreutilities_global.h  coreutils.cpp  coreutils.h
CoreFunctionality/DevicePorts/: CMakeLists.txt  datadeviceport.cpp  datadeviceport.h  deviceport.cpp  deviceport.h  deviceports.cpp  deviceports.h  deviceports_global.h  deviceportsfactory.cpp  deviceportsfactory.h  deviceportutils.cpp  deviceportutils.h  powerdeviceport.cpp  powerdeviceport.h
CoreFunctionality/ErrorHandling/: CMakeLists.txt  error.cpp  error.h  errorcodes.h  errorhandler.cpp  errorhandler.h  errorhandling.cpp  errorhandling.h  errorhandling_global.h  errorsettingsproxy.cpp  errorsettingsproxy.h  errortypes.cpp  errortypes.h
CoreFunctionality/Parsers/: CMakeLists.txt  connectiondefinitionparser.cpp  connectiondefinitionparser.h  connectioninputparser.cpp  connectioninputparser.h  iparser.h  isubparser.h  isubparserobserver.h  parser.cpp  parser.h  parsercreator.cpp  parsercreator.h  parsers.cpp  parsers.h  parsers_global.h  parserutils.cpp  parserutils.h  preparse.cpp  preparse.h  subparser.h
Data/: deviceportdata.h
DevicePorts/: datadeviceport.cpp  datadeviceport.h  deviceport.cpp  deviceport.h  deviceportdata.h  deviceportsfactory.cpp  deviceportsfactory.h  deviceportutils.cpp  deviceportutils.h  powerdeviceport.cpp  powerdeviceport.h
Documentation/: README.txt  deviceportinput.csv  labellingerrors.csv  parsingerrors.csv
Documentation/Examples/DataConnections/: connectiondefinitions.csv  connectioninput.csv  connectioninput_template.csv  labellingtable.csv
Documentation/Examples/Example1/DataConnections/: ex1_data_connectiondefinitions.csv  ex1_data_connectioninput.csv  ex1_data_labellingtable.csv
Documentation/Examples/Example1/ManagementConnections/: ex1_mgmt_labellingtable.csv
Documentation/Examples/Example1/PowerConnections/: ex1_pwr_connectiondefinitions.csv  ex1_pwr_connectioninput.csv  labellingtable.csv
Documentation/Examples/Example2/DataConnections/: connectiondefinitions.csv  ex2_data_connectioninput.csv  ex2_data_connectioninput_template.csv  labellingtable.csv
Documentation/Examples/Example2/ManagementConnections/: connectiondefinitions.csv  connectioninput.csv  connectioninput_template.csv  labellingtable.csv
Documentation/Examples/Example2/PowerConnections/: connectiondefinitions.csv  connectioninput.csv  ex2_pwr_connectiondefinitions.csv  ex2_pwr_connectioninput_template.csv  labellingtable.csv
Documentation/Examples/ManagementConnections/: connectiondefinitions.csv  connectioninput.csv  connectioninput_template.csv  labellingtable.csv
Documentation/Examples/PowerConnections/: connectioninput.csv  connectioninput_template.csv  labellingtable.csv
ErrorHandling/: error.cpp  error.h  errorhandler.cpp  errorhandler.h  errortypes.cpp  errortypes.h  errorutils.cpp  errorutils.h
Examples/DataConnections/: connectiondefinitions_data.csv  connectioninput.csv  connectioninput_data.csv  labellingtable_data.csv
Examples/PowerConnections/: connectiondefinitions_power.csv  connectioninput.csv  connectioninput_template.csv  labellingtable.csv
Parsers/: connectiondefinitionparser.cpp  connectiondefinitionparser.h  connectioninputparser.cpp  connectioninputparser.h  parser.cpp  parser.h  parsercreator.cpp  parsercreator.h  parserutils.cpp  parserutils.h  preparse.cpp  preparse.h
Settings/: CMakeLists.txt  appsettings.cpp  appsettings.h  settings.h  settings_global.h
Utilities/: applicationutils.cpp  deviceportutils.h  parserutils.cpp
Utils/: labelutils.cpp  labelutils.h
